; ModuleID = '/home/carl/AnghaBench/libgit2/tests/core/extr_dirent.c_test_core_dirent__empty_dir.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/core/extr_dirent.c_test_core_dirent__empty_dir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [10 x i8] c"empty_dir\00", align 1
@.str.1 = private unnamed_addr constant [18 x i8] c"empty_dir/content\00", align 1
@.str.2 = private unnamed_addr constant [10 x i8] c"whatever\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_core_dirent__empty_dir() #0 {
  %1 = call i32 @p_mkdir(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 511)
  %2 = call i32 @cl_must_pass(i32 %1)
  %3 = call i32 @git_path_is_empty_dir(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0))
  %4 = call i32 @cl_assert(i32 %3)
  %5 = call i32 @cl_git_mkfile(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.2, i64 0, i64 0))
  %6 = call i32 @git_path_is_empty_dir(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0))
  %7 = icmp ne i32 %6, 0
  %8 = xor i1 %7, true
  %9 = zext i1 %8 to i32
  %10 = call i32 @cl_assert(i32 %9)
  %11 = call i32 @git_path_is_empty_dir(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0))
  %12 = icmp ne i32 %11, 0
  %13 = xor i1 %12, true
  %14 = zext i1 %13 to i32
  %15 = call i32 @cl_assert(i32 %14)
  %16 = call i32 @p_unlink(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0))
  %17 = call i32 @cl_must_pass(i32 %16)
  %18 = call i32 @p_mkdir(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0), i32 511)
  %19 = call i32 @cl_must_pass(i32 %18)
  %20 = call i32 @git_path_is_empty_dir(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0))
  %21 = icmp ne i32 %20, 0
  %22 = xor i1 %21, true
  %23 = zext i1 %22 to i32
  %24 = call i32 @cl_assert(i32 %23)
  %25 = call i32 @git_path_is_empty_dir(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0))
  %26 = call i32 @cl_assert(i32 %25)
  %27 = call i32 @p_rmdir(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0))
  %28 = call i32 @cl_must_pass(i32 %27)
  %29 = call i32 @p_rmdir(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0))
  %30 = call i32 @cl_must_pass(i32 %29)
  ret void
}

declare dso_local i32 @cl_must_pass(i32) #1

declare dso_local i32 @p_mkdir(i8*, i32) #1

declare dso_local i32 @cl_assert(i32) #1

declare dso_local i32 @git_path_is_empty_dir(i8*) #1

declare dso_local i32 @cl_git_mkfile(i8*, i8*) #1

declare dso_local i32 @p_unlink(i8*) #1

declare dso_local i32 @p_rmdir(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
